# fast_brass

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
src/: consts.rs  lib.rs  main.rs
src/actions/: build.rs  develop.rs  mod.rs  network.rs  sell.rs  special.rs
src/board/: board.rs  connectivity.rs  mod.rs  network_utils.rs  resources.rs  state.rs
src/cards/: deck.rs  hand.rs  mod.rs
src/core/: building.rs  industry_mat.rs  links.rs  locations.rs  mod.rs  player.rs  static_data.rs  types.rs
src/game/: framework.rs  mod.rs  runner.rs
src/market/: merchants.rs  mod.rs  pricing.rs
src/python/: mod.rs  rl_api.rs
src/utils/: dsu.rs  helpers.rs  mod.rs
src/validation/: build_validation.rs  develop_validation.rs  mod.rs  network_validation.rs  sell_validation.rs
src/web/: mod.rs  serialize.rs
tests/: action_flow_tests.rs  board_tests.rs  connectivity_tests.rs  legacy_parity_tests.rs  network_tests.rs  recurrent_flow_tests.rs  validation_tests.rs
ui/: package-lock.json  package.json  svelte.config.js  vite.config.ts
ui/src/: app.css  app.html
ui/src/lib/: api.ts  coords.ts  store.ts  types.ts
ui/src/lib/components/: Board.svelte  CardHand.svelte  DiscardPileViewer.svelte  IndustryMat.svelte  SetupScreen.svelte  Sidebar.svelte
ui/src/routes/: +page.svelte
