[package]
name = "fast_brass"
version = "0.1.0"
edition = "2021"

[lib]
name = "fast_brass"
crate-type = ["rlib", "cdylib"]

[features]
default = []
python-bindings = ["dep:pyo3", "pyo3/abi3-py38", "pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.24.0", optional = true }
fixedbitset = "0.5.7"
once_cell = "*"
rand = "*"
num_enum = "0.7"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8"
mime_guess = "2"
tower-http = { version = "0.5", features = ["cors"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
proptest = "1.0"